--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -18,6 +21,10 @@
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"></activity>
             -->
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
         <activity android:name=".Profile" />
         <activity android:name=".Graphs" />
         <activity android:name=".Planning" />
