--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ruggiu.prova1">
+    package="com.example.groupi.heartattapp">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -16,6 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".myWelcome"></activity>
+        <activity
+            android:name=".Register"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <!--
          <activity
             android:name=".LoginActivity"
@@ -34,7 +39,8 @@
         <activity
             android:name=".Measurments"
             android:label="@string/title_activity_measurments" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".myLogin"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
