--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +31,10 @@
             android:name=".MyService"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".HRService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity android:name=".Profile"
             android:label="@string/title_activity_profile" />
@@ -48,6 +53,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".AlertReceiver" />
     </application>
 
 </manifest>
